--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.15",
     "json-server": "^1.0.0-beta.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primereact": "^10.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
